--- a/PythonBootcamp/00_Introduction.ipynb
+++ b/PythonBootcamp/00_Introduction.ipynb
@@ -7,7 +7,7 @@
     "<img src=\"support_files/cropped-SummerWorkshop_Header.png\">  \n",
     "\n",
     "<h1 align=\"center\">Python Bootcamp</h1> \n",
-    "<h3 align=\"center\">August 21-22, 2021</h3> "
+    "<h3 align=\"center\">August 20-21, 2022</h3> "
    ]
   },
   {
@@ -161,8 +161,8 @@
     "\n",
     "<p><a href=https://www.python.org/doc/>Python Documentation</a>\n",
     "<ul>\n",
-    "    <li><a href=https://docs.python.org/2/tutorial/index.html>Tutorial</a>\n",
-    "    <li><a href=https://docs.python.org/2/library/index.html>Library Reference</a>\n",
+    "    <li><a href=https://docs.python.org/3/tutorial/index.html>Tutorial</a>\n",
+    "    <li><a href=https://docs.python.org/3/library/index.html>Library Reference</a>\n",
     "</ul>\n",
     "\n",
     "<p>MATLAB-to-Python cheat sheets: \n",
@@ -172,17 +172,24 @@
     "</ul>\n",
     "\n",
     "\n",
-    "[Scientific python stack documentation: numpy, scipy, matplotlib](http://scipy.org/docs.html)\n",
+    "[Scientific python stack documentation: numpy, scipy, matplotlib](https://docs.scipy.org/doc/scipy/)\n",
     "\n",
     "[Stack Overflow](http://stackoverflow.com)\n",
     "    \n",
     "</div>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
