--- a/PythonBootcamp/01_Basic_Python_I_Object_and_Data_Structures.ipynb
+++ b/PythonBootcamp/01_Basic_Python_I_Object_and_Data_Structures.ipynb
@@ -7,7 +7,7 @@
     "<img src=\"support_files/cropped-SummerWorkshop_Header.png\">  \n",
     "\n",
     "<h1 align=\"center\">Python Bootcamp</h1> \n",
-    "<h3 align=\"center\">August 21-22, 2021</h3> "
+    "<h3 align=\"center\">August 20-21, 2022</h3> "
    ]
   },
   {
@@ -113,7 +113,7 @@
     "\n",
     "<p>&nbsp;&nbsp;&nbsp;&nbsp;'hello' -> 'HELLO'\n",
     "\n",
-    "<p>See: <a href=\"https://docs.python.org/2/library/stdtypes.html#string-methods\">string methods documentation</a>\n",
+    "<p>See: <a href=\"https://docs.python.org/3/library/stdtypes.html#string-methods\">string methods documentation</a>\n",
     "</div>"
    ]
   },
@@ -1121,18 +1121,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "a = { 'a': 100, 'c': 400 }\n",
     "b = { 'a': 300, 'b': 200 }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1146,7 +1153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
