fixed image links within notebooks to accommodate reorg

--- a/PythonBootcamp/additional_notebooks/11_Image_data.ipynb
+++ b/PythonBootcamp/additional_notebooks/11_Image_data.ipynb
@@ -54,9 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "face = scipy.misc.face()"
@@ -76,9 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Use imshow"
@@ -97,9 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -127,7 +121,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
@@ -141,19 +134,22 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "    \n",
     "<left><h1>The third image dimension refers to the number of color channels (R,G,B).</h1></left>\n",
-    "<p>Try making an array of equal size to the image, but that contains only the color at a given pixel (for example, find a pixel on a leaf, then display an array that contains only that color)\n",
-    "<p>Below is an example of how the plot might look:\n",
-    "<img src=\"./support_files/leafplot.png\"> \n",
-    "</div>\n"
+    "\n",
+    "Try making an array of equal size to the image, but that contains only the color at a given pixel (for example, find a pixel on a leaf, then display an array that contains only that color)\n",
+    "\n",
+    "Below is an example of how the plot might look\n",
+    "    \n",
+    "<img src=\"support_files/images/image_data/leafplot.png\"> \n",
+    "\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -166,16 +162,14 @@
     "<p>To start with, look at any (or all) of the color channels individually. Are they all the same?\n",
     "<p>Below is an example of what a plot of each individual color channel might look like. \n",
     "<p>Note that Matplotlib does not make it easy to put individual colorbars on subplots - scour the documentation or just check out the key to figure this out.\n",
-    "<img src=\"./support_files/grayscales.png\"> \n",
+    "<img src=\"support_files/images/image_data/grayscales.png\"> \n",
     "</div>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -205,9 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#apply the function, make a grayscale plot. Be sure to set the colormap appropriately."
@@ -221,7 +213,7 @@
     "<left><h1>Try using scipy's gaussian filter method to smooth (blur) the grayscaled face image</h1></left>\n",
     "<p>Hint: Look up documentation for scipy.ndimage.filters.gaussian_filter\n",
     "<p>Here's what a blurred image might look like:\n",
-    "<img src=\"./support_files/blurred.png\"> \n",
+    "<img src=\"support_files/images/image_data/blurred.png\"> \n",
     "</div>\n"
    ]
   },
@@ -243,16 +235,14 @@
     "<p>plot an X over it in the image\n",
     "<p>Here's what it should look like:\n",
     "\n",
-    "<img src=\"./support_files/maxpixel.png\"> \n",
+    "<img src=\"support_files/images/image_data/maxpixel.png\"> \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -265,16 +255,14 @@
     "<p>**Bonus exercise: Use a sliderbar widget to make the threshold dynamically adjustable:**\n",
     "<p>see: http://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html\n",
     "<p>Here's what it should look like:\n",
-    "<img src=\"./support_files/thresholdedimage.png\"> \n",
+    "<img src=\"support_files/images/image_data/thresholdedimage.png\"> \n",
     "</div>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# basic answer\n",
@@ -292,9 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Answer with slider bar\n",
@@ -320,16 +306,14 @@
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "<left><h1>Try making plots of intensity values for an x,y cross section through the image</h1></left>\n",
     "<p>For example, a plot might look like this:\n",
-    "<img src=\"./support_files/cross_sections.png\"> \n",
+    "<img src=\"support_files/images/image_data/cross_sections.png\"> \n",
     "</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#hint: Use gridspec to define the size and locations of the three plots"
@@ -338,23 +322,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
