--- a/PythonBootcamp/04_Introduction_To_Numpy.ipynb
+++ b/PythonBootcamp/04_Introduction_To_Numpy.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"support_files/cropped-SummerWorkshop_Header.png\">  \n",
+    "<img src=\"support_files/images/cropped-SummerWorkshop_Header.png\">  \n",
     "\n",
     "<h1 align=\"center\">Python Bootcamp</h1> \n",
     "<h3 align=\"center\">August 21-22, 2021</h3> "
@@ -58,7 +58,7 @@
     "\n",
     "<li>A 500x500 pixel image with 3 color channels (3D)\n",
     "\n",
-    "<img src=\"../support_files/rgb_array.svg\" style=\"margin: 10px; margin-left: 50px\">\n",
+    "<img src=\"support_files/images/numpy/rgb_array.svg\" style=\"margin: 10px; margin-left: 50px\">\n",
     "\n",
     "</ul>\n",
     "\n",
@@ -1933,7 +1933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
