--- a/PythonBootcamp/additional_notebooks/09_bike_crossing.ipynb
+++ b/PythonBootcamp/additional_notebooks/09_bike_crossing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"support_files/cropped-SummerWorkshop_Header.png\">  \n",
+    "<img src=\"support_files/images/cropped-SummerWorkshop_Header.png\">  \n",
     "\n",
     "<h1 align=\"center\">Python Bootcamp</h1> \n",
     "<h3 align=\"center\">August 18-19, 2018</h3> "
@@ -480,21 +480,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
   },
   "widgets": {
    "state": {},
