--- a/PythonBootcamp/additional_notebooks/11_Image_data.ipynb
+++ b/PythonBootcamp/additional_notebooks/11_Image_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\".\\support_files\\cropped-SummerWorkshop_Header.png\">  \n",
+    "<img src=\"support_files/images/cropped-SummerWorkshop_Header.png\">  \n",
     "\n",
     "<h1 align=\"center\">Python Bootcamp</h1> \n",
     "<h3 align=\"center\">August 18-19, 2018, Seattle, WA</h3> "
