updated image locations

--- a/PythonBootcamp/Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/Introduction_to_Pandas.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"support_files/images/cropped-SummerWorkshop_Header.png\">  \n",
+    "\n",
+    "<h1 align=\"center\">Python Bootcamp</h1> \n",
+    "<h3 align=\"center\">August 20-21, 2022</h3> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"padding: 5px; padding-left: 10px;\">\n",
     "    \n",
     "<center><h2>Table of Contents & Jumplinks</h2></center>\n",
@@ -82,7 +92,7 @@
     "* Each column can be a different value type (numeric, string, boolean, etc.)\n",
     "\n",
     "    \n",
-    "<img src=\"example_images/dataframe_example.png\">\n",
+    "<img src=\"support_files/images/pandas/dataframe_example.png\">\n",
     "\n"
    ]
   },
@@ -154,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +202,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "csv_path = os.path.join('example_datasets', 'MessySuperStoreData.csv')\n",
+    "csv_path = os.path.join('support_files/datasets', 'MessySuperStoreData.csv')\n",
     "df = pd.read_csv(csv_path)"
    ]
   },
@@ -258,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +641,7 @@
        "[17531 rows x 33 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,7 +1718,7 @@
     "\n",
     "Descriptive statistic are summary statistics that quantitatively describes or summarizes features from a collection of information or dataset. This typically included things like sample size, measures of central tendency (mean, median, mode), measures of variability or dispersion (standard deviation, min, max, kurtosis, skewness)\n",
     "\n",
-    "<img src=\"example_images/pandas_describe.png\">  \n",
+    "<img src=\"support_files/images/pandas/pandas_describe.png\">  \n",
     "\n",
     "For each quantitative column the following descriptive statitsics are provided:\n",
     "* count\n",
@@ -5785,6 +5795,7 @@
     "\n",
     "**Setup:**\n",
     "* Create a <a href='#copy'>copy</a> of the original dataframe for data manipluations and data cleaning\n",
+    "* understanding difference between<a href='#wide_long'> \"wide\" and \"long\" dataframes</a> \n",
     "\n",
     "        \n",
     "**Example 1:** Splitting the \"City, State\" column into two separate columns: \"City\" and \"State\"\n",
@@ -5834,6 +5845,34 @@
    "source": [
     "cleaned_df = df.copy()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='wide_long'></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"padding: 5px; padding-left: 10px; background:#e6e6e6\">\n",
+    "\n",
+    "SETUP\n",
+    "    \n",
+    "**Wide vs Long dataframes**\n",
+    "<img src=\"support_files/images/pandas/pandas_wide_vs_long_df.png\"> \n",
+    "\n",
+    "**Wide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6702,9 +6741,9 @@
     "    \n",
     "**gather columns into rows using [.melt](https://pandas.pydata.org/docs/reference/api/pandas.melt.html)**\n",
     "    \n",
-    "<img src=\"example_images/pandas_melt.png\">  \n",
+    "<img src=\"support_files/images/pandas/pandas_melt.png\">  \n",
     "    \n",
-    "df_melt = pd.melt(df, id_vars = [ ], value_vars= [ ], var_name = \"\", value_name = \"\")\n",
+    "<code>df_melt = pd.melt(df, id_vars = [ ], value_vars= [ ], var_name = \"\", value_name = \"\")</code>\n",
     "    \n",
     "* id_vars: Column(s) to use as identifier variables\n",
     "    * columns you want to retain/ keep intact)\n",
@@ -6775,7 +6814,9 @@
     "another  clean & legible way to do this would be:\n",
     "\n",
     "\n",
-    "<code>columns_to_keep = ['Category', 'Country', 'Customer ID', 'Customer Name', 'Discount',\n",
+    "\n",
+    "```python\n",
+    "columns_to_keep = ['Category', 'Country', 'Customer ID', 'Customer Name', 'Discount',\n",
     "                   'Market', 'Order ID', 'Order Priority', 'Postal Code', 'Product ID',\n",
     "                   'Product Name', 'Profit', 'Quantity', 'Region', 'Row ID', 'Segment',\n",
     "                   'Ship Mode', 'Shipping Cost', 'Sub-Category', 'City', 'State']\n",
@@ -6789,7 +6830,8 @@
     "                    id_vars = columns_to_keep,\n",
     "                    value_vars = columns_to_transform\n",
     "                    var_name = \"order_date\",\n",
-    "                    value_name = \"sales\")</code>"
+    "                    value_name = \"sales\")\n",
+    "```"
    ]
   },
   {
@@ -7259,7 +7301,7 @@
     "   \n",
     "**we can unpivot rows into columns using [.pivot](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.pivot.html)**\n",
     "    \n",
-    "<img src=\"example_images/pandas_pivot.png\">  \n",
+    "<img src=\"support_files/images/pandas/pandas_pivot.png\">  \n",
     "\n",
     "\n",
     "example: \n",
@@ -7764,7 +7806,7 @@
     "\n",
     "groupby allows you to group a dataframe using a mapper or by a Series of columns. A groupby operation involves some combination of splitting the object, applying a function, and combining the results. This can be used to group large amounts of data and compute operations on these groups.\n",
     "\n",
-    "<img src=\"example_images/pandas_groupby.png\">  \n",
+    "<img src=\"support_files/images/pandas/pandas_groupby.png\">  \n",
     "\n",
     "Pandas has a set of charting tools built into the library. By aggregating data using df.grouby().agg() we can quickly construct visualizations, for example here using df.plot.bar()\n",
     "    \n"
@@ -8743,11 +8785,11 @@
     "concatenate rows:\n",
     "    <code>pd.concat([df1,df2])</code>\n",
     "  \n",
-    "<img src=\"example_images/pandas_concat_rows.png\">    \n",
+    "<img src=\"support_files/images/pandas/pandas_concat_rows.png\">    \n",
     "\n",
     "concatenate columns: \n",
     "    <code>pd.concat([df1,df2], axis=1)</code>\n",
-    "<img src=\"example_images/pandas_concat_columns.png\"> \n",
+    "<img src=\"support_files/images/pandas/pandas_concat_columns.png\"> \n",
     "    \n",
     "If you've appended the dataframe by adding rows, you may wish to reset the index so specific index numbers aren't repeated. This is easily achievable with [.reset_index()](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.reset_index.html). \n",
     "\n",
@@ -8997,13 +9039,13 @@
     "    * Joins matching rows from df_right to df_left, retaining all the information from the df_left.\n",
     "    * <code>left_merge_df = pd.merge(df_left, df_right, how='left', on='x1')</code>\n",
     "  \n",
-    "<img src=\"example_images/pandas_join_left.png\">    \n",
+    "<img src=\"support_files/images/pandas/pandas_join_left.png\">    \n",
     "\n",
     "* right merge example: \n",
     "    * Joins matching rows from df_left to df_right, retaining all the information from the df_right\n",
     "    * <code>right_merge_df = pd.merge(left_df, right_df, how='right', on='x1')</code>\n",
     "\n",
-    "<img src=\"example_images/pandas_join_right.png\"> \n"
+    "<img src=\"support_files/images/pandas/pandas_join_right.png\"> \n"
    ]
   },
   {
@@ -9180,13 +9222,13 @@
     "    * Join data and retains only rows found in both dataframes.\n",
     "    * <code>inner_merge_df = pd.merge(df1, df2, how='inner', on='x1')</code>\n",
     "  \n",
-    "<img src=\"example_images/pandas_join_inner.png\">    \n",
+    "<img src=\"support_files/images/pandas/pandas_join_inner.png\">    \n",
     "\n",
     "* outer merge: \n",
     "    * Joins dataframes and retains all values, all rows.\n",
     "    * <code>outer_merge_df = pd.merge(df1, df2, how='outer', on='x1')</code>\n",
     "\n",
-    "<img src=\"example_images/pandas_join_outer.png\"> "
+    "<img src=\"support_files/images/pandas/pandas_join_outer.png\"> "
    ]
   },
   {
