--- a/PythonBootcamp/Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/Introduction_to_Pandas.ipynb
@@ -5861,10 +5861,19 @@
     "\n",
     "SETUP\n",
     "    \n",
-    "**Wide vs Long dataframes**\n",
+    "<h4>Wide vs Long dataframes</h4>\n",
+    "    \n",
     "<img src=\"support_files/images/pandas/pandas_wide_vs_long_df.png\"> \n",
     "\n",
-    "**Wide"
+    "**Wide**\n",
+    "A wide format contains values that do not repeat in a specific categorical column.\n",
+    "Wide is typically better for analysis \n",
+    "\n",
+    "    \n",
+    "**Long**\n",
+    "A long format contains values that do repeat in a specific categorical column.\n",
+    "Long is typically better for data visualization.\n",
+    "    "
    ]
   },
   {
