wording changes to .loc and .iloc to improve understanding

--- a/PythonBootcamp/Introduction_to_Pandas.ipynb
+++ b/PythonBootcamp/Introduction_to_Pandas.ipynb
@@ -2325,7 +2325,7 @@
     "\n",
     "[iloc](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.iloc.html) allows for selections of specific indices of rows and columns \n",
     "\n",
-    "Example: <code>df.iloc([rows,columns])</code>\n",
+    "Example: <code>df.iloc([row(s) number, column(s) number])</code>\n",
     "\n",
     "General selection info: \n",
     "* the function df.iloc[:,:] would select all rows and all columns\n",
@@ -2871,11 +2871,11 @@
     "[.loc[ ]](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.loc.html) allows access to a group of rows and columns by label(s) or a boolean array.\n",
     "\n",
     "select rows: \n",
-    "* <code>df.loc['row index']</code>\n",
+    "* <code>df.loc['index']</code>\n",
     "    * hint: similar to column selection described above, for row selection using df.loc[ ] returns a series where df.loc[[ ]] returns a dataframe\n",
     "    \n",
     "select row and column: \n",
-    "* <code>df.loc['row index', 'column']</code> \n",
+    "* <code>df.loc['index', 'column']</code> \n",
     "  "
    ]
   },
