Updated image links

--- a/PythonBootcamp/Intro_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/Intro_to_Data_Visualization.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"support_files/images/cropped-SummerWorkshop_Header.png\">  \n",
+    "\n",
+    "<h1 align=\"center\">Python Bootcamp</h1> \n",
+    "<h3 align=\"center\">August 20-21, 2022</h3> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div style=\"padding: 5px; padding-left: 10px;\">\n",
     "    \n",
     "<center><h2>Table of Contents & Jumplinks</h2></center>\n",
@@ -112,12 +122,12 @@
     "This supports accessibility for colorblind people as well as people who use assistive technology to magnify their screens or use high contrast mode on their computer.\n",
     "    \n",
     "**Follow color contrast guidelines:** \n",
-    " <img src=\"example_images/data_visualization_tutorial/viz_accessibility_color.png\" width=\"400\"/>   \n",
+    " <img src=\"support_files/images/data_viz/viz_accessibility_color.png\" width=\"400\"/>   \n",
     "**Label data points directly when possible:** It’s quicker to read, and ensures the graph can be understood without reliance on color.\n",
-    " <img src=\"example_images/data_visualization_tutorial/viz_accessibility_labels.png\" width=\"400\"/>\n",
+    " <img src=\"support_files/images/data_viz/viz_accessibility_labels.png\" width=\"400\"/>\n",
     "\n",
     "<b>Separate elements with whitespace or pattern.</b> This means distinguishing between data isn’t entirely reliant on contrast between colors. Add whitespace between adjacent sections in a pie chart, or use different patterns in a line or bar graph.\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_accessibility_whitespace.png\" width=\"400\"/>    \n",
+    "<img src=\"support_files/images/data_viz/viz_accessibility_whitespace.png\" width=\"400\"/>    \n",
     "    \n",
     "    \n",
     "**Resources:**\n",
@@ -139,10 +149,10 @@
     "<center><h1>Choosing an Appropriate Visualizations & Visual Encodings</h1></center>\n",
     "    \n",
     "**Plot Type Suggestions**\n",
-    "<img src=\"example_images/data_visualization_tutorial/chart-selection-diagram.png\" width=\"700\"/>    \n",
+    "<img src=\"support_files/images/data_viz/chart-selection-diagram.png\" width=\"700\"/>    \n",
     "    \n",
     "**Visual Encoding Suggestions**  \n",
-    "<img src=\"example_images/data_visualization_tutorial/visual_encodings.png\" width=\"700\"/>\n",
+    "<img src=\"support_files/images/data_viz/visual_encodings.png\" width=\"700\"/>\n",
     "\n",
     "\n"
    ]
@@ -589,7 +599,7 @@
     "Horizontal barplots are slightly more easy for the human eye to interpret. \n",
     "\n",
     "**Tips for creating an effective visualization**\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_generic_barplot.png\" height=\"350\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_generic_barplot.png\" height=\"350\"/> \n",
     "* If your data is categorical, order it smallest to largest for vice versa\n",
     "* Horizontal plots are slightly easier for humans to interpret\n",
     "\n",
@@ -868,12 +878,12 @@
     "**Description**:\n",
     "In descriptive statistics, a boxplot is a method for graphically demonstrating the locality, spread and skewness groups of numerical data through their quartiles. In addition to the box on a box plot, there can be lines (which are called whiskers) extending from the box indicating variability outside the upper and lower quartiles, thus, the plot is also termed as the box-and-whisker plot. Outliers that differ significantly from the rest of the dataset may be plotted as individual points beyond the whiskers on the box-plot.\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_boxplot_distribution.png\" width=\"400\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_boxplot_distribution.png\" width=\"400\"/> \n",
     "\n",
     "Box plots are non-parametric: they display variation in samples of a statistical population without making any assumptions of the underlying statistical distribution.    \n",
     "    \n",
     "**Tips for creating an effective visualization**\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_generic_boxplots.png\" height=\"350\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_generic_boxplots.png\" height=\"350\"/> \n",
     "* If your data is categorical, order it smallest to largest for vice versa\n",
     "* Horizontal plots are slightly easier for humans to interpret\n",
     "\n",
@@ -1148,7 +1158,7 @@
     "\n",
     "Violin plots are similar to box plots, except that they also show the probability density of the data at different values, usually smoothed by a kernel density estimator. A violin plot is more informative than a plain box plot. While a box plot only shows summary statistics such as mean/median and interquartile ranges, the violin plot shows the full distribution of the data. The difference is particularly useful when the data distribution is multimodal (more than one peak). In this case a violin plot shows the presence of different peaks, their position and relative amplitude.\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_violinplot.png\" width=\"400\"/>\n",
+    "<img src=\"support_files/images/data_viz/viz_violinplot.png\" width=\"400\"/>\n",
     "\n",
     "**Jumplinks:**\n",
     "* <a href='#violin_seaborn'>with seaborn</a>"
@@ -1232,7 +1242,7 @@
     "    \n",
     "**Description:** Scatter plots use dots to represent values for two different numeric variables. The position of each dot on the horizontal and vertical axis indicates values for an individual data point. Scatter plots are used to observe relationships between variables.\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_scatter_plot.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_scatter_plot.png\" width=\"500\"/> \n",
     "\n",
     "**Jumplinks:**\n",
     "* <a href='#scatter_matplotlib'>with matplotlib</a>  \n",
@@ -1422,7 +1432,7 @@
     "**STUDENT EXERCISES:** \n",
     " \n",
     "Recreate the following plot:  \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_student_exercise_mulivariate.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_student_exercise_mulivariate.png\" width=\"500\"/> \n",
     "    \n",
     "Hint: using seaborn is easier than matplotlib\n",
     "    \n",
@@ -1484,7 +1494,7 @@
     "    \n",
     "Density histograms give rough sense of the density of the underlying distribution of the data, and often for density estimation: estimating the probability density function of the underlying variable. The total area of a histogram used for probability density is always normalized to 1.\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_histogram_generic.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_histogram_generic.png\" width=\"500\"/> \n",
     "\n",
     "    \n",
     "**Kernel Density Estimates**\n",
@@ -1493,7 +1503,7 @@
     " \n",
     "Relative to a histogram, KDE can produce a plot that is less cluttered and more interpretable, especially when drawing multiple distributions. But it has the potential to introduce distortions if the underlying distribution is bounded or not smooth. Like a histogram, the quality of the representation also depends on the selection of good smoothing parameters.\n",
     " \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_hist_vs_KDE.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_hist_vs_KDE.png\" width=\"500\"/> \n",
     "    \n",
     "\n",
     "Jumplinks:\n",
@@ -1727,7 +1737,7 @@
     "\n",
     "**Description:** A time series or line plot, is a data visualization tool that illustrates data points at successive intervals of time. Each point on the chart corresponds to both a time and a quantity that is being measured.\n",
     "   \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_timeseries_examples.png\" height=\"350\"/>\n",
+    "<img src=\"support_files/images/data_viz/viz_timeseries_examples.png\" height=\"350\"/>\n",
     "    \n",
     "    \n",
     "**Tips for creating an effective visualization**\n",
@@ -1739,7 +1749,7 @@
     "\n",
     "These parameters control what visual semantics are used to identify the different subsets. It is possible to show up to three dimensions independently by using all three semantic types, but this style of plot can be hard to interpret and is often ineffective. Using redundant semantics (i.e. both color and style for the same variable) can be helpful for making graphics more accessible.\n",
     "\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_timeseries_improvements.png\" width=\"650\"/>\n",
+    "<img src=\"support_files/images/data_viz/viz_timeseries_improvements.png\" width=\"650\"/>\n",
     "\n",
     "\n",
     "**Jumplinks:**\n",
@@ -2179,14 +2189,17 @@
     "\n",
     "This process is very simple with matplotlib, just use [.imshow()](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.imshow.html)\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/image_data.png\" width=\"300\"/> \n",
+    "<img src=\"support_files/images/data_viz/image_data.png\" width=\"300\"/> \n",
     "\n",
     "**Basic code:**<code>ax.imshow(2d_array_data)</code>\n",
     "\n",
     "**Helpful Parameters**\n",
     "* <code>cmap= string</code>: The Colormap instance or registered colormap name used to map scalar data to colors. This parameter is ignored for RGB(A) data. Default: 'viridis'\n",
     "    * for more colormaps check out the [colormap documentation](https://matplotlib.org/stable/tutorials/colors/colormaps.html)\n",
-    "* <code>clim =(min,max)</code>: Set the color limits of the current image. If either vmin or vmax is None, the image min/max respectively will be used for color scaling."
+    "* <code>clim =(min,max)</code>: Set the color limits of the current image. If either vmin or vmax is None, the image min/max respectively will be used for color scaling.\n",
+    "    \n",
+    "**Further Resources**\n",
+    "This only covers the basics of plotting images. Please see the additional notebook: <code>11_image_data</code> for more techniques of working with image data"
    ]
   },
   {
@@ -2298,14 +2311,14 @@
     "\n",
     "A given figure can have more than one axis. The subplot command, which we used above, generates a single axis by default. But we can specify the number of axes that we want..\n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_subplots.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_subplots.png\" width=\"500\"/> \n",
     "\n",
     "    \n",
     "**Complex Figures with Gridspec**\n",
     "\n",
     "[Gridspec](http://matplotlib.org/users/gridspec.html) is useful when you have uneven subplots. It can get tricky for more complex plots, so first try to use <code>ax.subplots()</code> (like in the previous examples) if possible.  \n",
     " \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_gridspec.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_gridspec.png\" width=\"500\"/> \n",
     "    \n",
     "\n",
     "**Jumplinks:**\n",
@@ -2558,7 +2571,7 @@
     "\n",
     "**Description:** Table Lens is a common information visualization method to dynamically explore large amounts of tabular data. Borrowing from the spreadsheet model, the Table Lens displays regional data values in columns and rows without scrollbars and without obscuring any data and filling the cells with scaled and coloured horizontal small bars.\n",
     "\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_table_lens.png\" width=\"500\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_table_lens.png\" width=\"500\"/> \n",
     "\n",
     "**visualization creation:**\n",
     "* sort the dataframe/table values by a specific column\n",
@@ -2859,12 +2872,12 @@
     "**Basic heatmap**\n",
     "A heatmap is a type of matrix plot and graphical representation of data that uses a system of color-coding to represent different values. \n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_heatmap.png\" width=\"300\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_heatmap.png\" width=\"300\"/> \n",
     "\n",
     "    \n",
     "**Correlation Heatmap**\n",
     "A correlation heatmap specifically represents a correlation matrix, displaying the correlation between different variables. The value of correlation can take any value from -1 to 1. Correlation between two random variables or bivariate data does not necessarily imply a causal relationship. \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_heatmap_correlation.png\" width=\"500\"/>    \n",
+    "<img src=\"support_files/images/data_viz/viz_heatmap_correlation.png\" width=\"500\"/>    \n",
     "To create the correlation matrix for the visualizations, we will be using the pandas function\n",
     " [.corr](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)   \n",
     "      \n",
@@ -2892,7 +2905,7 @@
     "**With Matplotlib:**\n",
     "\n",
     "If you have a table of values, making a very basic heatmap is incredibly easy! \n",
-    "* <code>plt.imshow(df)</code><img src=\"example_images/data_visualization_tutorial/viz_heatmap_matplotlib.png\" width=\"200\"/>\n",
+    "* <code>plt.imshow(df)</code><img src=\"support_files/images/data_viz/viz_heatmap_matplotlib.png\" width=\"200\"/>\n",
     "\n",
     "\n",
     "Perhaps creating plots like this is fine when you just want a very quick by eye assessment of the data. However, you might notice from the image above that it is not very interpretable and is missing some really important information such as labels, annotated values, and color scale bar etc.\n",
@@ -3222,12 +3235,12 @@
     "\n",
     "**Correlation heatmaps**\n",
     "\n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_heatmap_correlation_examples.png\" width=\"750\"/> \n",
+    "<img src=\"support_files/images/data_viz/viz_heatmap_correlation_examples.png\" width=\"750\"/> \n",
     "\n",
     "When creating correlation plots, incorporating just a few elements will make them much more interpretable: \n",
     "* colorbar should span -1 to 1\n",
     "* Diverging colormap:  with a neutral color in the middle to represent 0, some options are:\n",
-    " <img src=\"example_images/data_visualization_tutorial/viz_diverging_colormaps.png\" width=\"200\"/> \n",
+    " <img src=\"support_files/images/data_viz/viz_diverging_colormaps.png\" width=\"200\"/> \n",
     "*  Correlation size/magnitude encoding in addition allows patterns to standout\n",
     "    * This technique is not trivial with matplotlib or seaborn so we will not cover it but there is a nice example and explanation [here on kaggle](https://www.kaggle.com/code/drazen/heatmap-with-sized-markers/notebook)\n",
     "    \n",
