moved pca imports to pca section

--- a/PythonBootcamp/Intro_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/Intro_to_Data_Visualization.ipynb
@@ -264,14 +264,7 @@
     "\n",
     "# main plotting packages\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "# PCA specific packages\n",
-    "from pca import pca as PCA\n",
-    "\n",
-    "from sklearn.decomposition import PCA as SK_PCA\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -3380,11 +3373,11 @@
     "\n",
     "The principal components of a collection of points in a real coordinate space are a sequence of p unit vectors, where the i-th vector is the direction of a line that best fits the data while being orthogonal to the first i-1 vectors. Here, a best-fitting line is defined as one that minimizes the average squared distance from the points to the line. These directions constitute an orthonormal basis in which different individual dimensions of the data are linearly uncorrelated. Principal component analysis (PCA) is the process of computing the principal components and using them to perform a change of basis on the data, sometimes using only the first few principal components and ignoring the rest.   \n",
     "    \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_pca_generic.png\" width=\"300\"/>\n",
+    "<img src=\"support_files/images/data_viz/viz_pca_generic.png\" width=\"300\"/>\n",
     "    \n",
     "PCA is used in exploratory data analysis and for making predictive models. It is commonly used for dimensionality reduction by projecting each data point onto only the first few principal components to obtain lower-dimensional data while preserving as much of the data's variation as possible. The first principal component can equivalently be defined as a direction that maximizes the variance of the projected data. The i-th principal component can be taken as a direction orthogonal to the first i-1 principal components that maximizes the variance of the projected data.\n",
     " \n",
-    "<img src=\"example_images/data_visualization_tutorial/viz_pca_examples.png\" width=\"800\"/>\n",
+    "<img src=\"support_files/images/data_viz/viz_pca_examples.png\" width=\"800\"/>\n",
     " \n",
     "Jumplinks:\n",
     "* <a href='#pca_setup'>setup for PCA</a>   \n",
@@ -3397,6 +3390,19 @@
    "metadata": {},
    "source": [
     "<a id='pca_setup'></a>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PCA specific packages\n",
+    "from pca import pca as PCA  # might need to pip install this package\n",
+    "\n",
+    "from sklearn.decomposition import PCA as SK_PCA\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
