adjusted axe vs ax labeling to be consistent

--- a/PythonBootcamp/Intro_to_Data_Visualization.ipynb
+++ b/PythonBootcamp/Intro_to_Data_Visualization.ipynb
@@ -525,14 +525,14 @@
     "\n",
     "**Code Basics**\n",
     "    \n",
-    "* create a figure: <code>fig, axe = plt.subplots()</code>\n",
-    "    * Adjust figure size: <code>fig, axe = plt.subplots(figsize = (horizontal, vertical)</code>\n",
-    "    * Multiple plots per figure: <code>fig, axe = plt.subplots(n_rows, n_columns)</code>\n",
+    "* create a figure: <code>fig, ax = plt.subplots()</code>\n",
+    "    * Adjust figure size: <code>fig, ax = plt.subplots(figsize = (horizontal, vertical)</code>\n",
+    "    * Multiple plots per figure: <code>fig, ax = plt.subplots(n_rows, n_columns)</code>\n",
     "        * Note!: we will cover this more in-depth later!\n",
     "\n",
-    "* add title: <code>axe.set_title('plot title')</code>\n",
-    "* set x label: <code>axe.set_xlabel('x label')</code>\n",
-    "* set y label: <code>axe.set_ylabel('y label')</code>"
+    "* add title: <code>ax.set_title('plot title')</code>\n",
+    "* set x label: <code>ax.set_xlabel('x label')</code>\n",
+    "* set y label: <code>ax.set_ylabel('y label')</code>"
    ]
   },
   {
@@ -566,10 +566,10 @@
    "source": [
     "# Lets practice by creating a blank plot! \n",
     "\n",
-    "fig, axe = plt.subplots()\n",
-    "axe.set_title('plot title')\n",
-    "axe.set_xlabel('x axis')\n",
-    "axe.set_ylabel('y axis')"
+    "fig, ax = plt.subplots()\n",
+    "ax.set_title('plot title')\n",
+    "ax.set_xlabel('x axis')\n",
+    "ax.set_ylabel('y axis')"
    ]
   },
   {
@@ -3483,17 +3483,17 @@
     "colors = {'US':'b', 'Europe':'g', 'Japan':'r'}\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
-    "for i in range(len(xvector)):\n",
+    "for column in range(len(xvector)):\n",
     "    # arrows project features (ie columns from csv) as vectors onto principle component axes\n",
     "    plt.arrow(0, 0, \n",
-    "              xvector[i] * max(xs), \n",
-    "              yvector[i] * max(ys),\n",
+    "              xvector[column] * max(xs), \n",
+    "              yvector[column] * max(ys),\n",
     "              color='r', \n",
     "              width=0.0005, \n",
     "              head_width=0.0025)\n",
-    "    plt.text(xvector[i] * max(xs) * 1, \n",
-    "             yvector[i] * max(ys) * 1,\n",
-    "             list(cars_pca.columns.values)[i], \n",
+    "    plt.text(xvector[column] * max(xs) * 1, \n",
+    "             yvector[column] * max(ys) * 1,\n",
+    "             list(cars_pca.columns.values)[column], \n",
     "             color='r')\n",
     "\n",
     "for i in range(len(xs)):\n",
